Fix z-index from background

--- a/src/CSS/Background.css
+++ b/src/CSS/Background.css
@@ -4,6 +4,5 @@ video {
     height: 99.6vh;
     object-fit: cover;
     opacity: 0.2;
-    z-index: 1;
     position: absolute;
   }
